# wasm-2048

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  Trunk.toml  trunk.html
src/: lib.rs  main.rs
static/: index.html
