[package]
name = "rust-2048"
version = "0.1.0"
authors = ["n7olkachev <n7olkachev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21" , features = ["hydration"] }
wasm-bindgen = "0.2.90"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Touch", "TouchList"] }

[lib]
name = "rust_2048"
crate-type = ["cdylib", "rlib"]
